--- a/Shopee/index.html
+++ b/Shopee/index.html
@@ -80,7 +80,7 @@
             <img width="150" src="./logo_shopee.png">
             <div class="search flex-col">
                 <div class="search-box flex-row">
-                    <input type="text">
+                    <input type="text" placeholder="this page is made by Adrian">
                     <button><i class="bi bi-search"></i></button>
                 </div>
                 <div class="tags flex-row">
